--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </section>	
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section class="section">
+<section class="comparison">
   <h2>How SIAConnect Compares</h2>
   <div class="comparison-table">
     <table>
@@ -171,44 +171,6 @@
   </div>
 </section>
 
-<style>
-  .comparison-table table {
-    width: 80%;
-    border-collapse: collapse;
-    margin-top: 40px;
-    animation: fadeInTable 1.5s ease;
-  }
-  .comparison-table th, .comparison-table td {
-    padding: 16px;
-    border-bottom: 2px solid #494949;
-    text-align: left;
-    color: #ccc;
-  }
-  .comparison-table th {
-    background-color: #0050b6;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-  }
-		
-  .comparison-table td {
-    background-color: #1c1c1c;
-  }
-  .highlight-sia {
-    background-color: rgba(59, 158, 255, 0.1);
-    color: #ffffff;
-    font-weight: 600;
-    transition: background-color 0.6s ease;
-  }
-  .highlight-sia:hover {
-    background-color: rgba(59, 158, 255, 0.15);
-  }
-
-  @keyframes fadeInTable {
-    0% { opacity: 0; transform: translateY(20px); }
-    100% { opacity: 1; transform: translateY(0); }
-  }
-</style>
 
 <!-- Behind the Scenes Section (Updated) -->
 <section id="behind-the-scenes" class="future-section fade-in-section">
