--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 </section>	
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section class="comparison">
+<section class="comparison-section">
+	<div class="comparison-container;>
   <h2>How SIAConnect Compares</h2>
   <div class="comparison-table">
     <table>
@@ -168,7 +169,7 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div></div>
 </section>
 
 
