--- a/index.html
+++ b/index.html
@@ -22,15 +22,7 @@
 						</ul>
 					</nav>
 	
-					<!-- Hero Section -->
-<section id="hero" class="hero-section">
-	<div class="hero-container">
-    <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
-    <h1>Welcome to SIAConnect</h1>
-    <p>Knowledge at the Speed of Work.</p>
-    <a href="#features" class="button special scrolly">Explore</a>
-  </div>
-</section>
+		
 
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
@@ -39,14 +31,13 @@
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
     <p>SIAConnect brings powerful search, streamlined requests, and personalized knowledge to the tools you already use — securely and seamlessly.</p>
-    <a href="#video" class="button special">See What’s Possible</a>
   </div>
 </section>
 					
 		<!-- Demo Video Section -->
 		<section id="video" class="demo-section fade-in-section">
 			<div class="demo-container">
-					<h2>Demo Video</h2>
+					<h2>See What's Possible</h2>
 					<p>See SIAConnect in action</p>
 				<video style="max-width:100%; height:auto;" controls>
 					<source src="assets/videos/2025-04-15 18_37_29.mp4" type="video/mp4">
@@ -431,7 +422,15 @@ Here’s how the first rollout and evolution of SIAConnect is planned:
     <p>Feature updates, Jira-tracked feedback, and ongoing platform enhancements.</p>
   </div>
 </div>
-				
+							<!-- Hero Section -->
+<section id="hero" class="hero-section">
+	<div class="hero-container">
+    <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
+    <h1>Welcome to SIAConnect</h1>
+    <p>Knowledge at the Speed of Work.</p>
+    <a href="#features" class="button special scrolly">Explore</a>
+  </div>
+</section>
 <!-- Footer -->
 <footer class="site-footer">
   <div class="footer-container">
