--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
   <div class="future-container">
+			<h1>Welcome to SIAConnect</>
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
@@ -463,7 +464,7 @@ faders.forEach(fader => {
 </script>
 
 <!-- Scroll to Top Button -->
-<a href="#hero" class="scroll-top-button" id="scrollTopBtn">&#8679;</a>
+<a href="#future" class="scroll-top-button" id="scrollTopBtn">&#8679;</a>
 
 <script>
 // Show Scroll to Top button when scrolling down
