--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
+	<h1>Welcome to SIAConnect</h1>
   <div class="future-container">
-			<h1>Welcome to SIAConnect</>
+			
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
