--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 </section>
 					
-		<!-- Demo Video Section -->
+	<!-- Demo Video Section -->
 		<section id="video" class="demo-section fade-in-section">
 			<div class="demo-container">
 					<h2>See What's Possible</h2>
@@ -85,6 +85,79 @@
     </div>
   </div>
 </section>	
+
+<!-- SIAConnect In Action Section -->
+<section id="features" class="main style fade-in-section">
+  <div class="container">
+<header class="major">
+      <h1>SIAConnect In Action</h1>
+   </header>
+
+    <!-- Features -->
+    <div class="row gtr-150">
+      <div class="col-6 col-12-medium">
+        <ul class="major-icons">
+          <li><span class="icon solid style1 major fa-file"></span></li>
+        </ul>
+        <h2>Search Documents & Knowledge</h2>
+        <p>Instantly find product documents, technical manuals, and KB articles from SharePoint (SIA) and Dataverse—all from inside Microsoft Teams.</p>
+      </div>
+
+      <div class="col-6 col-12-medium">
+        <ul class="major-icons">
+          <li><span class="icon solid style1 major fa-tasks"></span></li>
+        </ul>
+        <h2>Submit & Track Requests</h2>
+        <p>Submit document requests or check Jira request status without ever leaving the chat.</p>
+      </div>
+
+      <div class="col-6 col-12-medium">
+        <ul class="major-icons">
+          <li><span class="icon solid style1 major fa-weight-hanging"></span></li>
+        </ul>
+        <h2>Convert Measurements</h2>
+        <p>Convert between metric and SAE units instantly—perfect for technicians in the field.</p>
+      </div>
+
+      <div class="col-6 col-12-medium">
+        <ul class="major-icons">
+          <li><span class="icon solid style1 major fa-file-video"></span></li>
+        </ul>
+        <h2>View Product Videos</h2>
+        <p>Search Vimeo and access product training and service videos directly from Teams.</p>
+      </div>
+    </div>
+
+<!-- Use Cases -->
+<header class="minor" style="margin-top: 80px;">
+  <h1>Built for Every Role</h1>
+</header>
+
+<div class="role-highlight">
+  <div class="row aln-center">
+    <div class="col-4 col-12-small">
+      <h2>Technicians</h2>
+      <img src="assets/images/al-tech-avatar-transparent.png" alt="Technician Avatar" style="max-width: 60%; height: auto;">
+      <h4>Mobile & Desktop</h4>
+      <p>Manuals and guides<br>Repair steps<br>Unit conversion</p>
+    </div>
+
+    <div class="col-4 col-12-small">
+      <h2>Help Desk</h2>
+      <img src="assets/images/allison-helpdesk-avatar-transparent.png" alt="Help Desk Avatar" style="max-width: 60%; height: auto;">
+      <h4>Desktop</h4>
+      <p>Knowledge base<br>Manuals and guides<br>Document summaries</p>
+    </div>
+
+    <div class="col-4 col-12-small">
+      <h2>Managers</h2>
+      <img src="assets/images/sy-manager-avatar-transparent.png" alt="Manager Avatar" style="max-width: 60%; height: auto;">
+      <h4>Mobile & Desktop</h4>
+      <p>Document requests<br>Reporting<br>Training class management</p>
+    </div>
+  </div>
+</div>
+</section>
 
 <!-- SIAConnect vs Current Method Comparison Table -->
 <section class="comparison-section">
@@ -257,80 +330,7 @@
 				</div>
 			</div>
 		</section>
-				
 
-<!-- SIAConnect In Action Section -->
-<section id="features" class="main style2 fade-in-section">
-  <div class="container">
-<header class="major">
-      <h1>SIAConnect In Action</h1>
-   </header>
-
-    <!-- Features -->
-    <div class="row gtr-150">
-      <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-file"></span></li>
-        </ul>
-        <h2>Search Documents & Knowledge</h2>
-        <p>Instantly find product documents, technical manuals, and KB articles from SharePoint (SIA) and Dataverse—all from inside Microsoft Teams.</p>
-      </div>
-
-      <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-tasks"></span></li>
-        </ul>
-        <h2>Submit & Track Requests</h2>
-        <p>Submit document requests or check Jira request status without ever leaving the chat.</p>
-      </div>
-
-      <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-weight-hanging"></span></li>
-        </ul>
-        <h2>Convert Measurements</h2>
-        <p>Convert between metric and SAE units instantly—perfect for technicians in the field.</p>
-      </div>
-
-      <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-file-video"></span></li>
-        </ul>
-        <h2>View Product Videos</h2>
-        <p>Search Vimeo and access product training and service videos directly from Teams.</p>
-      </div>
-    </div>
-
-<!-- Use Cases -->
-<header class="minor" style="margin-top: 80px;">
-  <h1>Built for Every Role</h1>
-</header>
-
-<div class="role-highlight">
-  <div class="row aln-center">
-    <div class="col-4 col-12-small">
-      <h2>Technicians</h2>
-      <img src="assets/images/al-tech-avatar-transparent.png" alt="Technician Avatar" style="max-width: 60%; height: auto;">
-      <h4>Mobile & Desktop</h4>
-      <p>Manuals and guides<br>Repair steps<br>Unit conversion</p>
-    </div>
-
-    <div class="col-4 col-12-small">
-      <h2>Help Desk</h2>
-      <img src="assets/images/allison-helpdesk-avatar-transparent.png" alt="Help Desk Avatar" style="max-width: 60%; height: auto;">
-      <h4>Desktop</h4>
-      <p>Knowledge base<br>Manuals and guides<br>Document summaries</p>
-    </div>
-
-    <div class="col-4 col-12-small">
-      <h2>Managers</h2>
-      <img src="assets/images/sy-manager-avatar-transparent.png" alt="Manager Avatar" style="max-width: 60%; height: auto;">
-      <h4>Mobile & Desktop</h4>
-      <p>Document requests<br>Reporting<br>Training class management</p>
-    </div>
-  </div>
-</div>
-</section>
 
 <!-- Deploying SIAConnect Section -->
 <section id="deployment" class="main style3 fade-in-section">
