--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	<div class="comparison-container;>
   <h2>How SIAConnect Compares</h2>
   <div class="comparison-table">
-    <table>
+    <table class="comparison-table">
       <thead>
         <tr>
           <th>Ability / Action</th>
