--- a/index.html
+++ b/index.html
@@ -160,11 +160,13 @@
 </section>
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section class="comparison-section">
-	<div class="comparison-container;>
-  <h2>How SIAConnect Compares</h2>
-  <div class="comparison-table">
-    <table class="comparison-table">
+<section id="comparison" class="main style2">
+  <div class="container">
+    <header class="major">
+  <h1>How SIAConnect Compares</h1>
+		</header>
+    <div class="comparison-wrapper">
+      <table class="comparison-table">
       <thead>
         <tr>
           <th>Ability / Action</th>
