--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
 	</head>
 	<body class="is-preload">
 	
-<!-- Nav -->
-					<nav id="nav" class="nav">
-						<ul>	
-							<li><a href="#video">Demo</a></li>
-							<li><a href="#access">Ways to Access</a></li>
-							<li><a href="#usecases">Use Cases</a></li>
-							<li><a href="#features">Features</a></li>
-							<li><a href="#how">Behind the Scenes</a></li>
-							<li><a href="#roadmap">Roadmap</a></li>
-							<li><a href="#benefits">AI Agent Benefits</a></li>
-						</ul>
-					</nav>
+<nav id="nav">
+  <a href="#video">Demo</a>
+  <a href="#access">Ways to Access</a>
+  <a href="#usecases">Use Cases</a>
+  <a href="#features">Features</a>
+  <a href="#how">Behind the Scenes</a>
+  <a href="#roadmap">Roadmap</a>
+  <a href="#benefits">AI Agent Benefits</a>
+</nav>
 	
 		
 
