--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body class="is-preload">
 	
 <nav id="nav">
-  <a href="#video">Demo</a>
+  <a href="#video">What's Possible</a>
   <a href="#access">Ways to Access</a>
   <a href="#usecases">Use Cases</a>
   <a href="#features">Features</a>
