--- a/index.html
+++ b/index.html
@@ -239,7 +239,6 @@
 
 
 <!-- Behind the Scenes Section (Updated) -->
-<!-- Behind the Scenes Section (Updated) -->
 <section id="behind-the-scenes" class="main style3 fade-in-section">
   <div class="container">
     <header class="major">
@@ -255,7 +254,7 @@
           <p>Automates Jira creation, SharePoint document searches, and KB lookups using secure flows.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/dataverse-icon.png" alt="Dataverse" class="platform-logo">
         <div class="platform-description">
@@ -263,7 +262,7 @@
           <p>Stores knowledge articles, request metadata, and user preferences in a scalable low-code database.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/azure-ad-icon.png" alt="Azure AD" class="platform-logo">
         <div class="platform-description">
@@ -271,7 +270,7 @@
           <p>Uses Microsoft Entra ID to personalize experiences and restrict access based on user role.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/jira-icon.png" alt="Jira" class="platform-logo">
         <div class="platform-description">
@@ -279,7 +278,7 @@
           <p>Creates, updates, and monitors request tickets without ever leaving Microsoft Teams.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/sharepoint-icon.png" alt="SharePoint" class="platform-logo">
         <div class="platform-description">
@@ -287,7 +286,7 @@
           <p>Searches technical documents and manuals stored in the SIA document library using smart metadata filtering.</p>
         </div>
       </div>
-
+<div class="platform-divider"></div>
       <div class="platform-item">
         <img src="assets/images/azure-openai-icon.png" alt="Azure OpenAI" class="platform-logo">
         <div class="platform-description">
