--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
+	 <div class="container">
+<header class="major">
 	<h1>Welcome to SIAConnect</h1>
+	</div>
+	</header>
   <div class="future-container">
 			
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
