--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
-<header class="major">
+<header>
 	<h1>Welcome to SIAConnect</h1>
 	</header>
   <div class="future-container">
