--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
-<header>
-	<h1>Welcome to SIAConnect</h1>
-	</header>
+
   <div class="future-container">
-			
+			<header>
+	<h2Welcome to SIAConnect</h2>
+	</header>
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
