--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <div class="future-container">
 			<header>
 	<h2Welcome to SIAConnect</h2>
-	</header>
+	</header></div>
+	<div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
