--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
   <a href="#benefits">AI Agent Benefits</a>
 </nav>
 	
-		
-
+		<section class="header fade-in-section">
+<h1>welclme to SIAConnect</h1>
+</section>
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
 
   <div class="future-container">
-			<header>
-	<h2Welcome to SIAConnect</h2>
-	</header></div>
+		
 	<div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
