--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <a href="#benefits">AI Agent Benefits</a>
 </nav>
 	
-		<section class="header fade-in-section">
-<h1>welclme to SIAConnect</h1>
+		<section class="future-section fade-in-section">
+<h1>Wecolme to SIAConnect</h1>
 </section>
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
