--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="#benefits">AI Agent Benefits</a>
 </nav>
 	
-		<section class="future-section fade-in-section">
+		<section class="hero fade-in-section">
 <h1>Wecolme to SIAConnect</h1>
 </section>
 <!-- SIAConnect - Future of Knowledge Section -->
