--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 </nav>
 	
 		<section class="hero fade-in-section">
-<h1>Wecolme to SIAConnect</h1>
+<div class="hero">
+	<h1>Wecolme to SIAConnect</h1>
+	</div>
 </section>
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
