--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <a href="#benefits">AI Agent Benefits</a>
 </nav>
 	
-		<section class="hero fade-in-section">
-<div class="hero">
+		<section class="future-section fade-in-section">
+<div class="future-container">
 	<h1>Wecolme to SIAConnect</h1>
 	</div>
 </section>
