--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
   <a href="#roadmap">Roadmap</a>
   <a href="#benefits">AI Agent Benefits</a>
 </nav>
-	
-		<section class="future-section fade-in-section">
-<div class="future-container">
+
+<!-- SIAConnect - Header Section -->
+<section class="future-section fade-in-section">
+<div class="hero-container">
 	<h2>Wecolme to SIAConnect</h2>
 	</div>
 </section>
+		
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
 		
