--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </nav>
 
 <!-- SIAConnect - Header Section -->
-<section class="future-section fade-in-section">
+<section id="home" class="future-section fade-in-section">
 <div class="hero-container">
 	<h2>Wecolme to SIAConnect</h2>
 	</div>
@@ -86,13 +86,13 @@
   <svg class="siaconnect-svg-bg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none" viewBox="0 0 1600 900">
     <defs>
       <radialGradient id="pulseGradient" cx="50%" cy="50%" r="70%">
-        <stop offset="0%" stop-color="#0a0a0a" stop-opacity="0.4">
+        <stop offset="0%" stop-color="#ffffff" stop-opacity="0.4">
           <animate attributeName="stop-opacity" values="0.4;0.8;0.4" dur="6s" repeatCount="indefinite" />
         </stop>
-        <stop offset="60%" stop-color="#0a0a0a" stop-opacity="0.85">
+        <stop offset="60%" stop-color="ffffff" stop-opacity="0.85">
           <animate attributeName="stop-opacity" values="0.85;1;0.85" dur="6s" repeatCount="indefinite" />
         </stop>
-        <stop offset="100%" stop-color="#000000" stop-opacity="1" />
+        <stop offset="100%" stop-color="#ffffff" stop-opacity="1" />
       </radialGradient>
     </defs>
     <rect width="1600" height="900" fill="url(#pulseGradient)" />
@@ -470,7 +470,7 @@ faders.forEach(fader => {
 </script>
 
 <!-- Scroll to Top Button -->
-<a href="#future" class="scroll-top-button" id="scrollTopBtn">&#8679;</a>
+<a href="#home" class="scroll-top-button" id="scrollTopBtn">&#8679;</a>
 
 <script>
 // Show Scroll to Top button when scrolling down
