--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       </div>
 <div class="platform-divider"></div>
       <div class="platform-item">
-        <img src="assets/images/jira-icon.png" alt="Jira" class="platform-logo">
+        <img src="assets/images/icons/jira-icon.png" alt="Jira" class="platform-logo">
         <div class="platform-description">
           <h2>Jira</h2>
           <p>Creates, updates, and monitors request tickets without ever leaving Microsoft Teams.</p>
