--- a/index.html
+++ b/index.html
@@ -131,33 +131,25 @@
     <!-- Features -->
     <div class="row gtr-150">
       <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-file"></span></li>
-        </ul>
+        <img src="assets/images/icons/doc-search-icon.png" alt="Document Search">
         <h2>Search Documents & Knowledge</h2>
         <p>Instantly find product documents, technical manuals, and KB articles from SharePoint (SIA) and Dataverse—all from inside Microsoft Teams.</p>
       </div>
 
       <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-tasks"></span></li>
-        </ul>
+        <img src="assets/images/icons/doc-req-icon.png" alt="Submit Track Requests">
         <h2>Submit & Track Requests</h2>
         <p>Submit document requests or check Jira request status without ever leaving the chat.</p>
       </div>
 
       <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-weight-hanging"></span></li>
-        </ul>
+        <img src="assets/images/icons/convert-icon.png" alt="Convert Measurements">
         <h2>Convert Measurements</h2>
         <p>Convert between metric and SAE units instantly—perfect for technicians in the field.</p>
       </div>
 
       <div class="col-6 col-12-medium">
-        <ul class="major-icons">
-          <li><span class="icon solid style1 major fa-file-video"></span></li>
-        </ul>
+        <img src="assets/images/icons/vid-search-icon.png" alt="Video Seaerch">
         <h2>View Product Videos</h2>
         <p>Search Vimeo and access product training and service videos directly from Teams.</p>
       </div>
