--- a/index.html
+++ b/index.html
@@ -85,20 +85,6 @@
 				
 <!-- Access Section -->
 <section id="access" class="siaconnect-access-section fade-in-section">
-  <svg class="siaconnect-svg-bg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none" viewBox="0 0 1600 900">
-    <defs>
-      <radialGradient id="pulseGradient" cx="10%" cy="10%" r="20%">
-        <stop offset="0%" stop-color="#ffffff" stop-opacity="0.4">
-          <animate attributeName="stop-opacity" values="0.4;0.8;0.4" dur="6s" repeatCount="indefinite" />
-        </stop>
-        <stop offset="60%" stop-color="ffffff" stop-opacity="0.25">
-          <animate attributeName="stop-opacity" values="0.85;1;0.85" dur="6s" repeatCount="indefinite" />
-        </stop>
-        <stop offset="100%" stop-color="#ffffff" stop-opacity=".5" />
-      </radialGradient>
-    </defs>
-    <rect width="1600" height="900" fill="url(#pulseGradient)" />
-  </svg>
 
   <div class="container">
     <h1>Ways to Access SIAConnect</h1>
@@ -122,8 +108,8 @@
 </section>	
 
 <!-- SIAConnect In Action Section -->
-<section id="features" class="main style fade-in-section">
-  <div class="container">
+<section id="features" class="features-section fade-in-section">
+  <div class="features-container">
 <header class="major">
       <h1>SIAConnect In Action</h1>
    </header>
