--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<h2>Wecolme to SIAConnect</h2>
 	</div>
 </section>
+
 		
 <!-- SIAConnect - Future of Knowledge Section -->
 <section class="future-section fade-in-section">
@@ -39,8 +40,9 @@
     <p>SIAConnect brings powerful search, streamlined requests, and personalized knowledge to the tools you already use — securely and seamlessly.</p>
   </div>
 </section>
-					
-	<!-- Demo Video Section -->
+
+		
+<!-- Demo Video Section -->
 		<section id="video" class="demo-section fade-in-section">
 			<div class="demo-container">
 					<h2>See What's Possible</h2>
@@ -51,6 +53,7 @@
 				</video>
 			</div>
 		</section>
+
 		
 <!-- AIBenefits Section -->
 		<section id="benefits" class="main style2">
@@ -82,7 +85,8 @@
 				</div>
 			</div>
 		</section>
-				
+
+		
 <!-- Access Section -->
 <section id="access" class="siaconnect-access-section fade-in-section">
 
@@ -107,6 +111,7 @@
   </div>
 </section>	
 
+		
 <!-- SIAConnect In Action Section -->
 <section id="features" class="features-section fade-in-section">
   <div class="features-container">
@@ -117,25 +122,25 @@
     <!-- Features -->
     <div class="row gtr-150">
       <div class="col-6 col-12-medium">
-        <img src="assets/images/icons/doc-search-icon.png" alt="Document Search">
+        <img src="assets/images/icons/doc-search-icon.png" alt="Document Search" style="max-width: 25%; height: auto;">
         <h2>Search Documents & Knowledge</h2>
         <p>Instantly find product documents, technical manuals, and KB articles from SharePoint (SIA) and Dataverse—all from inside Microsoft Teams.</p>
       </div>
 
       <div class="col-6 col-12-medium">
-        <img src="assets/images/icons/doc-req-icon.png" alt="Submit Track Requests">
+        <img src="assets/images/icons/doc-req-icon.png" alt="Submit Track Requests" style="max-width: 25%; height: auto;">
         <h2>Submit & Track Requests</h2>
         <p>Submit document requests or check Jira request status without ever leaving the chat.</p>
       </div>
 
       <div class="col-6 col-12-medium">
-        <img src="assets/images/icons/convert-icon.png" alt="Convert Measurements">
+        <img src="assets/images/icons/convert-icon.png" alt="Convert Measurements" style="max-width: 25%; height: auto;">
         <h2>Convert Measurements</h2>
         <p>Convert between metric and SAE units instantly—perfect for technicians in the field.</p>
       </div>
 
       <div class="col-6 col-12-medium">
-        <img src="assets/images/icons/vid-search-icon.png" alt="Video Seaerch">
+        <img src="assets/images/icons/vid-search-icon.png" alt="Video Seaerch" style="max-width: 25%; height: auto;">
         <h2>View Product Videos</h2>
         <p>Search Vimeo and access product training and service videos directly from Teams.</p>
       </div>
