--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 </section>
 
 <!-- Roadmap Section -->
-<section id="roadmap" class="main style3 fade-in-section">
+<section id="deployment" class="main style3 fade-in-section">
   <div class="container">
     <header class="major">
 					<h1>What the Future Holds</h1>
