--- a/index.html
+++ b/index.html
@@ -114,10 +114,8 @@
 		
 <!-- SIAConnect In Action Section -->
 <section id="features" class="features-section fade-in-section">
-  <div class="features-container">
-<header class="major">
+  <div class="container">
       <h1>SIAConnect In Action</h1>
-   </header>
 
     <!-- Features -->
     <div class="row gtr-150">
