--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
 					</div>
 				</div>
 			</div>
+			<div class="container">
+				<header class="major">
+			<h1>🔐 Security Considerations</h1>
+			<ul>
+<li>All data interaction occurs in Teams or SharePoint (SIA)</li>
+<li>All users authenticated via Azure AD</li>
+<li>No data exposure to external sources</li>
+<li>Usage of Dataverse ensures RBAC and policy enforcement</li>
+</ul>
+</div>
 		</section>
 
 		
