--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 			</div>
 			<div class="container">
 				<header class="major">
-			<h1>🔐 Security Considerations</h1>
+			<h1>🔐 Security & Compliance Considerations</h1>
 			<ul>
-<li>All data interaction occurs in Teams or SharePoint (SIA)</li>
-<li>All users authenticated via Azure AD</li>
-<li>No data exposure to external sources</li>
-<li>Usage of Dataverse ensures RBAC and policy enforcement</li>
+<li>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</li>
+<li>Branding, tone, and usage logs align with Responsible AI Practices.</li>
+<li>No external/public access is enabled or planned.</li>
+<li>All data structures (e.g., KBData, Error Codes) reside in secure Dataverse environments.</li>
 </ul>
 </div>
 		</section>
@@ -378,9 +378,9 @@
 
         <h2>Onboarding Experience</h2>
         <p>
-          A streamlined \"Welcome to SIAConnect\" guide provided at rollout.<br>
+          A streamlined "Welcome to SIAConnect" guide provided at rollout.<br>
           In-chat tips and conversational guidance available immediately within Teams.<br>
-          Ongoing discovery supported through a \"Tip of the Day\" feature to keep users engaged.
+          Ongoing discovery supported through a "Tip of the Day" feature to keep users engaged.
         </p>
 
         <h2>Updates and Future Development</h2>
@@ -428,7 +428,6 @@ Here’s how the first rollout and evolution of SIAConnect is planned:
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <h1>Welcome to SIAConnect</h1>
     <p>Knowledge at the Speed of Work.</p>
-    <a href="#features" class="button special scrolly">Explore</a>
   </div>
 </section>
 <!-- Footer -->
