--- a/request.html
+++ b/request.html
@@ -8,26 +8,13 @@
 </head>
 <body>
 <!-- Nav -->
-<nav id="nav">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="search.html">Search Documents</a></li>
-        <li><a href="request.html">Document Request</a></li>
-        <li><a href="kb.html">Knowledge Base</a></li>
-        <li><a href="converter.html">Measurement Converter</a></li>
-        <li><a href="videos.html">Product Videos</a></li>
-        <li><a href="roadmap.html">Roadmap</a></li>
-    </ul>
-</nav>
 
     <header id="header" class="alt">
         <div class="inner">
 	<img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" style="height:150px; vertical-align:middle; margin-right:10px;">
-            <h1>Document Request</h1>
-            <p>This section provides more information about document request in SIAConnect.</p>
-            <ul class="actions">
-                <li><a href="index.html" class="button">Back to Home</a></li>
-            </ul>
+            <h1>Creating a Document Request</h1>
+            <p>This section will give you step-by-step guidance on creating a Document Request in SIAConnect.</p>
+
         </div>
     </header>
 
@@ -36,7 +23,18 @@
             <header class="major">
                 <h2>Document Request</h2>
             </header>
-            <p>[This section is under construction. Detailed content will be added soon.]</p>
+            <ul><li>To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
+	    <li>SIAConnect will respond with a document request form.</li>
+	    <li>Select which document type you are wanting (e.g., Tech bulletin, User Manual, Knowledge Base article).</li>
+	    <li>Select the product model that the request pertains to. If the model is not in the list, you can manually type in the model.</li>
+	    <li>Add a description - this is everything that you want to make sure is completed and included in the document. The more information, the better!</li>
+	    <li>Set a priority. If there is no rush (can wait a week or longer), set the priority to <b>Low</b>. If there's not a huge rush but you need it within 5-7 days, select <b></b>Medium</b>. For urgent requests, set the priority as <b>High</b>.</b></li>
+	    <li>Once you have filled out the form, select <b>OK</b>.</li>
+	    <li>SIAConnect will then show you the details of your request for you to confirm that everything is correct.</li>
+	    <li>If everything looks good, select <b>Submit Request</b>. If you notice an error or wish to add more information, select <b>Edit Request</b> to make changes.</li>
+	    <li>Once you have submitted your request, SIAConnect will respond with a document request number.</li>
+	    <li>You will also receive an email confirmation of your request, which includes the document request number.</li>
+	    </ul>
         </div>
     </section>
 <script src="assets/js/jquery.min.js"></script>
