--- a/request.html
+++ b/request.html
@@ -21,6 +21,7 @@
     <section id="main" class="main style1">
         <div class="container">
             <header class="major">
+		    <img src="images/documentrequest-banner.png">
                 <h2>Document Request</h2>
             </header>
             <ul><li>To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
