--- a/request.html
+++ b/request.html
@@ -17,9 +17,8 @@
 
         </div>
     </header>
-
-    <section id="main" class="main style1">
-        <div class="container">
+<section class="future-section fade-in-section">
+	<div class="future-container">
             <header class="major">
 		    <img src="images/documentrequest-banner.png">
                 <h2>Document Request</h2>
