--- a/request.html
+++ b/request.html
@@ -20,7 +20,7 @@
 <section class="future-section fade-in-section">
 	<div class="future-container">
             <header class="major">
-		    <img src="images/documentrequest-banner.png">
+		    <img src="images/documentrequest-banner.png" style="width:50%; height:auto;">
                 <h2>Document Request</h2>
             </header>
             <ul><li>To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
