--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
 		
 <!-- AIBenefits Section -->
-		<section id="benefits" class="main style2">
-			<div class="container">
+		<section id="benefits" class="benefit-section">
+			<div class="benefit-container">
 				<header class="major">
 					<h1>Benefits of implementing an AI Agent</h1>
-					<h4>Effectively bridges multiple knowledge systems within a single application</h4>
+					<h2>Effectively bridges multiple knowledge systems within a single application</h2>
 				</header>
-				<div class="row gtr-150">
-					<div class="col-6 col-12-medium"><ul>
+			<ul>	<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
 						<li>Consolidates access to disparate information into one seamless interface.</li>
 					</div>
 					<div class="col-6 col-12-medium">
@@ -84,7 +84,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container">
+			<div class="benefit-container">
 				<header class="major">
 			<h1>🔐 Security & Compliance Considerations</h1>
 			<ul>
