--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
 
 				
 		<!-- SIAConnect Roadmap Timeline -->
-		<p style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">
+		<h2 style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">
 Here’s how the first rollout and evolution of SIAConnect is planned:
-</p>
+</h2>
 <div class="roadmap">
   <div class="roadmap-step">
     <div class="roadmap-circle">1</div>
