--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 		<section id="benefits" class="benefit-section">
 			<div class="benefit-container">
 				<header class="major">
-					<h1>Benefits of implementing an AI Agent</h1>
-					<h2>Effectively bridges multiple knowledge systems within a single application</h2>
+					<h2>Benefits of implementing an AI Agent</h2>
+					<p>Effectively bridges multiple knowledge systems within a single application</p>
 				</header>
 			<ul>	<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
