--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 		
 <!-- SIAConnect In Action Section -->
-<section id="features" class="inaction-section fade-in-section">
+<section id="features" class="features-section fade-in-section">
   <div class="container">
       <h1>SIAConnect In Action</h1>
 
