--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 <section id="home" class="future-section fade-in-section">
 <div class="hero-container">
 	<h2>Wecolme to SIAConnect</h2>
+	<p>What if accessing the knowledge you need— documents, answers, video walkthroughs, request tools—was as simple as messaging a colleague?</p>
+<p>That’s the idea behind SIAConnect, your all-in-one digital assistant embedded directly into Microsoft Teams.</p>
+
+<p>Designed with real users in mind—from frontline technicians to help desk agents and decision-makers—SIAConnect blends sleek utility with a deep understanding of how your team actually works. It’s fast, intuitive, and already connected to the tools that Glory uses every day.</p>
+
+<p>There’s no steep learning curve, no clunky interfaces. Just a smart, human-like presence that’s always available, always on, and always improving.</p>
+
+<p>And the best part?</p>
+<p>You don’t need to install anything new.
+SIAConnect lives right inside Teams, where your work already happens.</p>
 	</div>
 </section>
 
