--- a/index.html
+++ b/index.html
@@ -22,23 +22,16 @@
 
 </nav>
 
-<!-- SIAConnect - Header Section -->
-<section id="home" class="future-section fade-in-section">
-<div class="hero-container">
-	<h1>Wecolme to SIAConnect</h1>
-	<p>What if accessing the knowledge you need— documents, answers, video walkthroughs, request tools—was as simple as messaging a colleague?</p>
-	</div>
-</section>
-
 		
 <!-- SIAConnect - Future of Knowledge Section -->
-<section class="future-section fade-in-section">
+<section section id="home" class="future-section fade-in-section">
 		
 	<div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
-    <p>SIAConnect brings powerful search, streamlined requests, and personalized knowledge to the tools you already use — securely and seamlessly.</p>
+    <p>What if accessing the knowledge you need — documents, answers, video walkthroughs, request tools — was as simple as messaging a colleague?</p>
+				<h1>Wecolme to SIAConnect</h1>
   </div>
 </section>
 
