--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
     <p>What if accessing the knowledge you need — documents, answers, video walkthroughs, request tools — was as simple as messaging a colleague?</p>
+				<p>Guess what?</p>
+				<p>It is!</p>
+				<div class="platform-divider"></div>
 				<h1>Wecolme to SIAConnect</h1>
   </div>
 </section>
