--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
     <p>What if accessing the knowledge you need — documents, answers, video walkthroughs, request tools — was as simple as messaging a colleague?</p>
-				<p>Guess what?</p>
-				<p>It is!</p>
+				<h3>Guess what?</h3>
+				<h3>It is!</h3>
 				<div class="platform-divider"></div>
 				<h1>Wecolme to SIAConnect</h1>
   </div>
@@ -42,8 +42,7 @@
 <!-- Demo Video Section -->
 		<section id="video" class="demo-section fade-in-section">
 			<div class="demo-container">
-					<h2>See What's Possible</h2>
-					<p>See SIAConnect in action</p>
+					<h2>What's Possible</h2>
 				<video style="max-width:100%; height:auto;" controls>
 					<source src="assets/videos/2025-04-15 18_37_29.mp4" type="video/mp4">
 					Your browser does not support the video tag.
@@ -131,19 +130,19 @@
         <h2>Search Documents & Knowledge</h2>
         <p>Instantly find product documents, technical manuals, and KB articles from SharePoint (SIA) and Dataverse—all from inside Microsoft Teams.</p>
       </div>
-
+<div class="platform-divider"></div>
       <div class="col-6 col-12-medium">
         <img src="assets/images/icons/doc-req-icon.png" alt="Submit Track Requests" style="max-width: 25%; height: auto;">
         <h2>Submit & Track Requests</h2>
         <p>Submit document requests or check Jira request status without ever leaving the chat.</p>
       </div>
-
+<div class="platform-divider"></div>
       <div class="col-6 col-12-medium">
         <img src="assets/images/icons/convert-icon.png" alt="Convert Measurements" style="max-width: 25%; height: auto;">
         <h2>Convert Measurements</h2>
         <p>Convert between metric and SAE units instantly—perfect for technicians in the field.</p>
       </div>
-
+<div class="platform-divider"></div>
       <div class="col-6 col-12-medium">
         <img src="assets/images/icons/vid-search-icon.png" alt="Video Seaerch" style="max-width: 25%; height: auto;">
         <h2>View Product Videos</h2>
